layout fix in about page on mobile.

--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,4 +1,5 @@
 .about {
+  width: 100%;
   font-size: 1.3rem;
   color: #999;
 
